buildscript {
  repositories {
    mavenCentral()
  }
  dependencies {
    classpath 'org.commonmark:commonmark:0.29.0'
    classpath 'org.commonmark:commonmark-ext-gfm-tables:0.29.0'
  }
}

plugins {
  id 'java'
  id 'application'
}

repositories {
  mavenCentral()
  maven { url = uri('https://jitpack.io') }
}

dependencies {
  implementation 'com.github.mozq:app-settings4j:v1.1.0'
  implementation 'com.github.mozq:nano-template4j:v1.0.0'
  implementation 'com.formdev:flatlaf:3.7.2'
  implementation 'org.apache.commons:commons-imaging:1.0.0-alpha6'

  testImplementation 'org.junit.jupiter:junit-jupiter:5.14.1'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

def appDisplayName = providers.gradleProperty('appName').get()
def appIdentifier = providers.gradleProperty('identifier').get()
def appMainClass = providers.gradleProperty('mainClassName').get()
def appVendor = providers.gradleProperty('vendor').get()
def appCopyright = providers.gradleProperty('copyright').get()
def appSourceEncoding = providers.gradleProperty('sourceEncoding').get()

def releaseVersion = providers.gradleProperty('version')
    .orElse(providers.environmentVariable('RELEASE_VERSION'))
    .orElse('1.0.0')
    .get()
version = releaseVersion.startsWith('v') ? releaseVersion.substring(1) : releaseVersion
def distributionBaseName = "${project.name}-${project.version}"
def generatedReadmeResourcesDir = layout.buildDirectory.dir('generated/readme-html')
def generatedReadmeDocsDir = generatedReadmeResourcesDir.map { it.dir('net/mozq/picto/resources/docs') }

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
  withSourcesJar()
}

application {
  mainClass = appMainClass
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = appSourceEncoding
  options.release = 25
}

tasks.withType(Javadoc).configureEach {
  options.encoding = appSourceEncoding
  options.charSet = providers.gradleProperty('javadocCharset').get()
  options.locale = providers.gradleProperty('javadocLocale').get()
}

tasks.named('test') {
  useJUnitPlatform()
}

tasks.withType(AbstractArchiveTask).configureEach {
  preserveFileTimestamps = false
  reproducibleFileOrder = true
}

jar {
  manifest {
    attributes(
        'Main-Class': appMainClass,
        'Implementation-Title': appDisplayName,
        'Implementation-Version': project.version
    )
  }
}

tasks.register('generateReadmeHtml') {
  group = 'documentation'
  description = 'Generates the in-app HTML help files from the Markdown README files.'

  inputs.files(file('README.md'), file('README-ja.md'))
  outputs.dir generatedReadmeResourcesDir

  doLast {
    def extensions = [
        org.commonmark.ext.gfm.tables.TablesExtension.create()
    ]
    def parser = org.commonmark.parser.Parser.builder()
        .extensions(extensions)
        .build()
    def renderer = org.commonmark.renderer.html.HtmlRenderer.builder()
        .extensions(extensions)
        .escapeHtml(false)
        .build()

    def renderReadme = { File markdownFile, File htmlFile ->
      def bodyHtml = renderer.render(parser.parse(markdownFile.getText(appSourceEncoding)))
      def html = """<!DOCTYPE html>
<html>
<head>
<meta charset="${appSourceEncoding}" />
<title>README</title>
<style type="text/css">
body {
    font-family: Dialog, sans-serif;
    font-size: 12pt;
}
h2 {
    border-top: 2px solid gray;
}
table, th, td {
    border: 1px solid gray;
}
table {
    border-collapse: collapse;
}
th, td {
    padding: 2px 4px;
}
</style>
</head>
<body>
${bodyHtml}
</body>
</html>
"""
      htmlFile.parentFile.mkdirs()
      htmlFile.setText(html, appSourceEncoding)
    }

    renderReadme(file('README.md'), generatedReadmeDocsDir.get().file('README.html').asFile)
    renderReadme(file('README-ja.md'), generatedReadmeDocsDir.get().file('README-ja.html').asFile)
  }
}

tasks.named('processResources') {
  dependsOn tasks.named('generateReadmeHtml')
  from(generatedReadmeResourcesDir)
}

def isWindowsHost = {
  System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')
}

def isMacHost = {
  System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('mac')
}

def isLinuxHost = {
  System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('linux')
}

def jpackageInputDir = layout.buildDirectory.dir('jpackage/input')
def packageReadmeDir = layout.buildDirectory.dir('jpackage/readme/README')
def winAppImageDir = layout.buildDirectory.dir('jpackage/windows-app-image')
def macDmgWorkDir = layout.buildDirectory.dir('jpackage/macos-dmg')
def linuxAppImageDir = layout.buildDirectory.dir('jpackage/linux-app-image')
def linuxScalableIconDir = "${appDisplayName}/share/icons/hicolor/scalable/apps"

def java25Launcher = javaToolchains.launcherFor {
  languageVersion = JavaLanguageVersion.of(25)
}

def jpackageExecutable = providers.provider {
  def javaHome = java25Launcher.get().metadata.installationPath.asFile
  new File(javaHome, isWindowsHost() ? 'bin/jpackage.exe' : 'bin/jpackage').absolutePath
}

def jpackageCommonArgs = {
  [
      '--name', appDisplayName,
      '--app-version', project.version.toString(),
      '--vendor', appVendor,
      '--copyright', appCopyright,
      '--input', jpackageInputDir.get().asFile.absolutePath,
      '--main-jar', tasks.named('jar').get().archiveFileName.get(),
      '--main-class', appMainClass,
      '--java-options', '-Dfile.encoding=UTF-8'
  ]
}

tasks.register('prepareJpackageInput', Sync) {
  group = 'distribution'
  description = 'Collects the application JAR and runtime dependencies for jpackage.'

  dependsOn tasks.named('jar')
  into jpackageInputDir
  from tasks.named('jar')
  from configurations.runtimeClasspath
}

tasks.register('preparePackageReadme', Sync) {
  group = 'distribution'
  description = 'Collects README, license, and notice files for native packages.'

  dependsOn tasks.named('generateReadmeHtml')
  into packageReadmeDir
  from(generatedReadmeDocsDir) {
    include 'README*.html'
  }
  from('.') {
    include 'LICENSE.txt', 'NOTICE.txt'
  }
}

tasks.register('jpackageWindowsAppImage', Exec) {
  group = 'distribution'
  description = 'Builds a Windows app image with a bundled Java runtime.'

  onlyIf { isWindowsHost() }
  dependsOn tasks.named('prepareJpackageInput')
  inputs.dir jpackageInputDir
  inputs.file file('src/build/resources/app-icons/app-icon.ico')
  outputs.dir winAppImageDir

  doFirst {
    delete winAppImageDir
    mkdir winAppImageDir.get().asFile

    commandLine([
        jpackageExecutable.get(),
        '--type', 'app-image',
        '--dest', winAppImageDir.get().asFile.absolutePath,
        '--icon', file('src/build/resources/app-icons/app-icon.ico').absolutePath
    ] + jpackageCommonArgs())
  }
}

tasks.register('bundleWindowsApp', Zip) {
  group = 'distribution'
  description = 'Builds the Windows ZIP distribution from the jpackage app image.'

  onlyIf { isWindowsHost() }
  dependsOn tasks.named('jpackageWindowsAppImage'), tasks.named('preparePackageReadme')
  archiveFileName = "${distributionBaseName}-windows-x64.zip"
  destinationDirectory = layout.buildDirectory.dir('distributions')

  from(winAppImageDir.map { it.dir(appDisplayName) }) {
    into appDisplayName
  }
  from(packageReadmeDir) {
    into "${appDisplayName}/README"
  }
}

tasks.register('jpackageMacosDmg', Exec) {
  group = 'distribution'
  description = 'Builds an unsigned macOS DMG with a bundled Java runtime.'

  onlyIf { isMacHost() }
  dependsOn tasks.named('prepareJpackageInput'), tasks.named('preparePackageReadme')
  inputs.dir jpackageInputDir
  inputs.dir packageReadmeDir
  inputs.file file('src/build/resources/app-icons/app-icon-filled.icns')
  outputs.dir macDmgWorkDir

  doFirst {
    delete macDmgWorkDir
    mkdir macDmgWorkDir.get().asFile

    commandLine([
        jpackageExecutable.get(),
        '--type', 'dmg',
        '--dest', macDmgWorkDir.get().asFile.absolutePath,
        '--icon', file('src/build/resources/app-icons/app-icon-filled.icns').absolutePath,
        '--mac-package-identifier', appIdentifier,
        '--mac-package-name', appDisplayName,
        '--mac-dmg-content', packageReadmeDir.get().asFile.absolutePath,
        '--java-options', '-Dapple.laf.useScreenMenuBar=true',
        '--java-options', "-Xdock:name=${appDisplayName}"
    ] + jpackageCommonArgs())
  }
}

tasks.register('bundleMacosApp', Copy) {
  group = 'distribution'
  description = 'Copies the macOS DMG to the distribution directory using the project release name.'

  onlyIf { isMacHost() }
  dependsOn tasks.named('jpackageMacosDmg')
  from(macDmgWorkDir) {
    include '*.dmg'
    rename { "${distributionBaseName}-macos-arm64.dmg" }
  }
  into layout.buildDirectory.dir('distributions')
}

tasks.register('jpackageLinuxAppImage', Exec) {
  group = 'distribution'
  description = 'Builds a Linux app image with a bundled Java runtime.'

  onlyIf { isLinuxHost() }
  dependsOn tasks.named('prepareJpackageInput')
  inputs.dir jpackageInputDir
  inputs.file file('src/build/resources/app-icons/png/app-icon-512.png')
  outputs.dir linuxAppImageDir

  doFirst {
    delete linuxAppImageDir
    mkdir linuxAppImageDir.get().asFile

    commandLine([
        jpackageExecutable.get(),
        '--type', 'app-image',
        '--dest', linuxAppImageDir.get().asFile.absolutePath,
        '--icon', file('src/build/resources/app-icons/png/app-icon-512.png').absolutePath
    ] + jpackageCommonArgs())
  }
}

tasks.register('bundleLinuxApp', Tar) {
  group = 'distribution'
  description = 'Builds the Linux tar.gz distribution from the jpackage app image.'

  onlyIf { isLinuxHost() }
  dependsOn tasks.named('jpackageLinuxAppImage'), tasks.named('preparePackageReadme')
  inputs.file file('src/build/resources/app-icons/app-icon.svg')
  archiveFileName = "${distributionBaseName}-linux-x64.tar.gz"
  destinationDirectory = layout.buildDirectory.dir('distributions')
  compression = Compression.GZIP

  from(linuxAppImageDir.map { it.dir(appDisplayName) }) {
    into appDisplayName
  }
  from('src/build/resources/app-icons/app-icon.svg') {
    into linuxScalableIconDir
    rename { "${project.name}.svg" }
  }
  from(packageReadmeDir) {
    into "${appDisplayName}/README"
  }
}

tasks.register('packageCurrentOs') {
  group = 'distribution'
  description = 'Builds the native package for the current operating system.'

  if (isWindowsHost()) {
    dependsOn tasks.named('bundleWindowsApp')
  } else if (isMacHost()) {
    dependsOn tasks.named('bundleMacosApp')
  } else if (isLinuxHost()) {
    dependsOn tasks.named('bundleLinuxApp')
  }
}

tasks.named('distTar') {
  enabled = false
}

tasks.named('assemble') {
  dependsOn tasks.named('packageCurrentOs')
}
